design order table, seller table, sale table in ecommerce dashboard

--- a/assets/postcss/components/_apex-custom-tooltip.css
+++ b/assets/postcss/components/_apex-custom-tooltip.css
@@ -27,4 +27,27 @@
       }
     }
   }
+  .radialBar-legend{
+    @apply flex items-center justify-center;
+    .radialBar-legend-series{
+      @apply flex items-center w-full gap-3;
+      span{
+        &.radialBar-legend-marker{
+          @apply relative inline-block;
+          &:after{
+            @apply h-3 w-3 left-0 top-0 border-none rounded-full content-[""] -translate-x-1/2 -translate-y-1/2 absolute;
+            &.primary{
+              @apply bg-primary;
+            }
+            &.secondary{
+              @apply bg-secondary;
+            }
+            &.title{
+              @apply bg-title;
+            }
+          }
+        }
+      }
+    }
+  }
 }
