--- a/assets/pug/layout/footer-files.pug
+++ b/assets/pug/layout/footer-files.pug
@@ -65,6 +65,7 @@ if (swiper)
     // swiper slider js
     script(src="../../assets/js/swiper-slider/swiper-bundle.min.js")
     script(src="../../assets/js/swiper-slider/swiper-slider-page.js")
+    script(src="../../assets/js/swiper-slider/ecommerce.js")
 
 if (wow)
     // wow animation js
