--- a/html/template/calendar.html
+++ b/html/template/calendar.html
@@ -48,9 +48,9 @@
                       <use href="../../assets/svg/sprite.svg#Search"> </use>
                     </svg><i class="search-close hidden cursor-pointer xl:block w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] absolute" data-feather="x"></i>
                   </div>
-                  <!-- Search End    -->
+                  <!-- Search End -->
                 </div>
-                <div class="icon-menu"> 
+                <div class="icon-menu">
                   <ul class="flex items center">
                     <li class="cursor-pointer hidden 2xl:flex items-center justify-center px-[calc(7px_+_(14_-_7)_*_((100vw_-_320px)_/_(1920_-_320)))] first:pl-0 last:pr-0  last:border-r-none border-r border-border-light dark:border-border-dark rtl:border-l rtl:border-r-0">
                       <button class="search-show">
@@ -1176,6 +1176,7 @@
   <!-- swiper slider js-->
   <script src="../../assets/js/swiper-slider/swiper-bundle.min.js"></script>
   <script src="../../assets/js/swiper-slider/swiper-slider-page.js"></script>
+  <script src="../../assets/js/swiper-slider/ecommerce.js"></script>
   <!-- ecommerce js-->
   <script src="../../assets/js/ecommerce-app/ecommerce-app-page.js"></script>
   <!-- fontAwesome js-->
