--- a/assets/pug/data/tables.pug
+++ b/assets/pug/data/tables.pug
@@ -1061,7 +1061,7 @@
             header:["Name","Order","Delivery Date","Pricing","Status","Payment", "Action"],
             body:[
                 {
-                    image:"7.jpg",
+                    image:"27.jpg",
                     title:"Lena Smith", 
                     subTitle:"United Kingdom",
                     order:"Nike Tshirt",
@@ -1072,7 +1072,7 @@
                     payment:"Credit Card",
                 },
                 {
-                    image:"6.jpg",
+                    image:"20.jpg",
                     title:"Nicol Green", 
                     subTitle:"Australia",
                     order:"Adidas Hat",
@@ -1083,7 +1083,7 @@
                     payment:"Bank Transfer",
                 },
                 {
-                    image:"8.jpg",
+                    image:"37.jpg",
                     title:"David King", 
                     subTitle:"United Kingdom",
                     order:"Puma Bag",
@@ -1094,7 +1094,7 @@
                     payment:"Credit Card",
                 },
                 {
-                    image:"11.jpg",
+                    image:"13.jpg",
                     title:"Jone smith", 
                     subTitle:"Netherlands",
                     order:"Nike Glove",
@@ -1103,6 +1103,93 @@
                     status:"Canceled",
                     statusColor:"secondary",
                     payment:"Bank Transfer",
+                },
+            ]    
+        };
+
+
+//- ====== Sale Detail Json ====== -//
+- 
+    var SALE_DETAIL=
+        {
+            header:["Country","Sales","Revenue","Average",],
+            body:[
+                {
+                    image:"germany.png",
+                    country:"Germany", 
+                    sales:"3,768",
+                    revenue:"$526",
+                    average:"8.38%",
+                },
+                {
+                    image:"usa.png",
+                    country:"USA", 
+                    sales:"2,654",
+                    revenue:"$659",
+                    average:"14.90%",
+                },
+                {
+                    image:"australian.png",
+                    country:"Australia", 
+                    sales:"6,159",
+                    revenue:"$158",
+                    average:"1.54%",
+                },
+                {
+                    image:"canada.png",
+                    country:"Canada", 
+                    sales:"3,954",
+                    revenue:"$952",
+                    average:"14.45%",
+                },
+                {
+                    image:"bangladesh.png",
+                    country:"Bangladesh", 
+                    sales:"9,879",
+                    revenue:"$359",
+                    average:"2.18%",
+                },
+            ]    
+        };
+
+
+//- ====== Product seller Detail Json ====== -//
+- 
+    var PRODUCT_SELlE_DETAIL=
+        {
+            header:["Product","Seller","Price","Sold","Profit"],
+            body:[
+                {
+                    image:"11.jpg",
+                    product:"Nike Sneakers", 
+                    seller:"Leonine Green",
+                    price:"$100.00",
+                    sold:"254",
+                    profit:"$25400.00",
+                },
+                {
+                    image:"9.jpg",
+                    product:"I phone 12", 
+                    seller:"Ashley Miller",
+                    price:"$120.00",
+                    sold:"621",
+                    profit:"$74520.00",
+                },
+                {
+                    image:"10.jpg",
+                    product:"Adidas T shirt", 
+                    seller:"Melody Clark",
+                    price:"$80.00",
+                    sold:"298",
+                    profit:"$23840.00",
+                },
+                {
+                    image:"12.jpg",
+                    product:"Seiko Watch", 
+                    seller:"Marty Wood",
+                    price:"$39.00",
+                    sold:"756",
+                    profit:"$29484.00",
                 },
             ]    
         };
