--- a/assets/pug/pages/template/ecommerce.pug
+++ b/assets/pug/pages/template/ecommerce.pug
@@ -11,8 +11,11 @@
 -var customizer=true;
 
 //- apex-chart
--var apexChart=true; 
+-var apexChart=true;  
 -var uniqueApex=true;
+
+//- swiper-slider
+-var swiper=true;
 
 //- Breadcrumbs 
 -var pageTitle="Ecommerce Dashboard";
@@ -48,11 +51,10 @@ html(lang='en')
                         div.col-span-6(class="xl:col-span-6 xl3:col-span-12")
                             div.card.gap-0 
                                 div.card-header
-                                    +card-header("Recent Statistics","select",HiSTORY_DATE_DROPDOWN)
+                                    +card-header("Sales Summary ( Jun 2023)","select",HiSTORY_DATE_DROPDOWN)
                                 div.card-body
                                     div.relative
-                                        div#recentStatisticsChart1    
-                                        div#recentStatisticsChart2(class="absolute inset-0")
+                                        //- div#customerRadialchart 
                         div.col-span-7(class="4xl:col-span-8 lg:col-span-12 lg:-order-1")
                             div.card
                                 div.card-header
@@ -91,103 +93,61 @@ html(lang='en')
                                 div.card-body
                                     div.relative 
                                         div#customerRadialchart
+                                div.card-footer.border-t.border-border-light.pt-4.px-0 
+                                    div.radialBar-legend
+                                        div(class="border-r border-border-light px-3 dark:border-border-dark last:border-none rtl:border-r-0 rtl:border-l w-full") 
+                                            div.radialBar-legend-series
+                                                span.radialBar-legend-marker.primary
+                                                p.radialBar-legend-text.text-3xs.text-title Current Customers
+                                            small.text-xs.text-content3(class="pl-3 rtl:pl-0 rtl:pr-3") 45%
+                                        div(class="border-r border-border-light px-3 dark:border-border-dark last:border-none rtl:border-r-0 rtl:border-l w-full")
+                                            div.radialBar-legend-series
+                                                span.radialBar-legend-marker.secondary
+                                                p.radialBar-legend-text.text-3xs.text-title New Customers
+                                            small.text-xs.text-content3(class="pl-3 rtl:pl-0 rtl:pr-3") 62% 
+                                        div(class="border-r border-border-light px-3 dark:border-border-dark last:border-none rtl:border-r-0 rtl:border-l w-full")
+                                            div.radialBar-legend-series
+                                                span.radialBar-legend-marker.title
+                                                p.radialBar-legend-text.text-3xs.text-title Retarget Customers 
+                                            small.text-xs.text-content3(class="pl-3 rtl:pl-0 rtl:pr-3") 34%
                         div.col-span-4(class="4xl:col-span-8 lg:col-span-12 lg:-order-1")
                             div.card
                                 div.card-header
-                                    +card-header("Customers","setting", HISTORY_DROPDOWN)
+                                    +card-header("Recent Activity","setting", HISTORY_DROPDOWN)
                                 div.card-body
                         div.col-span-4(class="4xl:col-span-8 lg:col-span-12 lg:-order-1")
                             div.card
                                 div.card-header
-                                    +card-header("Customers","setting", HISTORY_DROPDOWN)
+                                    +card-header("Global Sales by top Locations","setting", HISTORY_DROPDOWN)
                                 div.card-body
+                                    div.overflow-auto.custom-scroll  
+                                        include ../../components/table/sale-detail
+                        div.col-span-5(class="4xl:col-span-8 lg:col-span-12 lg:-order-1")
+                            div.card
+                                div.card-header
+                                    +card-header("Best Product Seller","setting", HISTORY_DROPDOWN)
+                                div.card-body
+                                    div.overflow-auto.custom-scroll  
+                                        include ../../components/table/product-seller-detail
+                        div.col-span-7(class="4xl:col-span-8 lg:col-span-12 lg:-order-1")
+                            div.card
+                                div.card-header
+                                    +card-header("Today’s Deals","setting", HISTORY_DROPDOWN)
+                                div.card-body
+                                    div.grid.gap-card-gap(class="sm:mt-5").overflow-hidden 
+                                        div.swiper.product-slides.swiper-product
+                                            div.swiper-wrapper
+                                                each data in PRODUCT_BOX 
+                                                    div.swiper-slide 
+                                                        +product(data) 
 
 
 
+.
 
 
-                        //- div.col-span-3(class="4xl:col-span-4 lg:col-span-12")
-                        //-   div.grid.grid-cols-2.gap-card-gap  
-                        //-     div.col-span-2(class="lg:col-span-1 2md:col-span-2")
-                        //-       div.card 
-                        //-         div.card-body
-                        //-           +widget1(REVENUE_WIDGET)
-                        //-     div.col-span-2(class="lg:col-span-1 2md:col-span-2")
-                        //-       div.card 
-                        //-         div.card-header
-                        //-           +card-header("Earnings","setting", HISTORY_DROPDOWN)
-                        //-         div.card-body
-                        //-           +widget2(EARNINGS_WIDGET) 
-                        //- div.col-span-6(class="4xl:col-span-8 lg:col-span-12 lg:-order-1")
-                        //-   div.card
-                        //-     div.card-header
-                        //-       +card-header("User Information","setting", SHORTING_DROPDOWN)
-                        //-     div.card-body
-                        //-       div.overflow-auto.custom-scroll  
-                        //-         include ../../components/table/user-information
-                        //- div.col-span-3(class="4xl:col-span-4 lg:col-span-12") 
-                        //-   div.grid.grid-cols-2.gap-card-gap
-                        //-     div.col-span-2(class="lg:col-span-1 2md:col-span-2")
-                        //-       div.card
-                        //-         div.card-header
-                        //-           +card-header("Inventory Cost","setting", HISTORY_DROPDOWN)
-                        //-         div.card-body
-                        //-           +product-list(INVENTORY_CARD)
-                        //-     div.col-span-2(class="lg:col-span-1 2md:col-span-2")
-                        //-       div.card
-                        //-         div.card-header
-                        //-           +card-header("Advertising","setting", HISTORY_DROPDOWN)
-                        //-         div.card-body
-                        //-           +product-list(ADVERTISE_CARD)
-                        //- div.col-span-3(class="4xl:col-span-4 lg:col-span-6 lg:-order-1 2md:col-span-12")
-                        //-   div.card
-                        //-     div.card-header
-                        //-       +card-header("Audit log","setting", HISTORY_DROPDOWN)
-                        //-     div.card-body
-                        //-       +audit-car(AUDIT_LOG)
-                        //- div.col-span-3(class="4xl:col-span-4 lg:-order-2 lg:col-span-6 2md:col-span-12")
-                        //-   div.card 
-                        //-     div.card-header
-                        //-       +card-header("News & Update")
-                        //-     div.card-body  
-                        //-       +image-card(NEWS_UPDATE,"badge","link")
-                        //- div.col-span-9(class="4xl:col-span-8 lg:col-span-12")
-                        //-   div.card 
-                        //-     div.card-header
-                        //-       +card-header("Users Positions","btn-group",FILTER)
-                        //-     div.card-body 
-                        //-       div.grid.grid-cols-12 
-                        //-         div.col-span-2(class="xl:col-span-3 2md:col-span-12") 
-                        //-           ul(class="flex flex-col gap-[14px] 2md:gap-[8px] 2md:flex-row 2md:flex-wrap")
-                        //-             each item in USERS_POSITIONS
-                        //-               li  
-                        //-                 button.flex.items-center.gap-2(class="justify-start w-full text-xs font-semibold 2md:py-[7px] 2md:px-[7px] py-[9px] px-4 bg-gray-light dark:bg-sidebar-dark2")
-                        //-                   span(class=`w-[10px] bg-${item.status} h-[10px] rounded-[2px]`)
-                        //-                   span(class="text-xs font-semibold text-left line-clamp-1 ")= item.title
-                        //-         div.col-span-10(class="xl:col-span-9 2md:col-span-12") 
-                        //-           div#userPosition.custom-data-label.apex-custom-text(class="2md:-mt-[12px] ml-[-40px] 2md:ml-0")
-                        //- div.col-span-3(class="4xl:col-span-4 lg:col-span-12")  
-                        //-   div.card 
-                        //-     div.card-header 
-                        //-       +card-header("Sell Overview","setting", HISTORY_DROPDOWN)
-                        //-     div.card-body
-                        //-       div#SellOverview.apex-custom-tooltip.apex-tooltip-style1(class="mb-[-15px]")
-                        //- div.col-span-6(class="4xl:col-span-8 lg:col-span-12")
-                        //-   div.card
-                        //-     div.card-header
-                        //-       +card-header("Open Invoices","setting", HISTORY_DROPDOWN)
-                        //-     div.card-body
-                        //-       div.overflow-auto.custom-scroll 
-                        //-         include ../../components/table/open-invoice
-                        //- div.col-span-3(class="4xl:col-span-4 lg:col-span-6 lg:-order-1 2md:col-span-12")
-                        //-   div.card 
-                        //-     div.card-header
-                        //-       +card-header("Notification","setting", HISTORY_DROPDOWN)
-                        //-     div.card-body 
-                        //-       +image-card-rounded(NOTIFICATION_CARD,"badge","link")
-
-                // Page Body End 
-                +footer("sm:flex-col flex sm:gap-1 gap-2 items-center justify-between py-[1.1875rem] shadow-footer bg-white px-body-space mt-card-gap")
-            include ../../components/customizer
+    // Page Body End 
+    +footer("sm:flex-col flex sm:gap-1 gap-2 items-center justify-between py-[1.1875rem] shadow-footer bg-white px-body-space mt-card-gap")
+        include ../../components/customizer
 
     include ../../layout/footer-files
