--- a/assets/pug/components/table/product-seller-detail.pug
+++ b/assets/pug/components/table/product-seller-detail.pug
@@ -16,10 +16,10 @@ table.table.equal-space
                         a(href="javascript:void(0)")
                             h4(class="text-xs font-semibold text-title group-hover:text-primary")=bodyData.product
                 td(class="min-w-[80px]")
-                    h4(class=`text-xs font-semibold text-title`)= bodyData.seller
+                    h4(class=`text-xs group-hover:text-primary font-semibold text-title`)= bodyData.seller
                 td(class="min-w-[80px]") 
-                    h4(class=`text-xs font-semibold text-title`)= bodyData.price
+                    h4(class=`text-xs group-hover:text-primary font-semibold text-title`)= bodyData.price
                 td(class="min-w-[80px]") 
-                    h4(class="text-xs font-semibold text-title")= bodyData.sold
+                    h4(class="text-xs font-semibold group-hover:text-primary text-title")= bodyData.sold
                 td(class="min-w-[80px]") 
-                    h4(class="text-xs font-semibold text-title")= bodyData.profit
+                    h4(class="text-xs font-semibold group-hover:text-primary text-primary")= bodyData.profit
