--- a/assets/postcss/components/_layout.css
+++ b/assets/postcss/components/_layout.css
@@ -27,13 +27,13 @@
         @apply w-[calc(65px_+_(90_-_65)_*_((100vw_-_320px)_/_(1920_-_320)))] transition-all ease-in-out;
       }
       .page-header{
-        @apply ml-[4.8125rem] rtl:ml-unset rtl:mr-[4.8125rem] w-[calc(100%_-_77px);];
+        @apply ml-[4.8125rem] rtl:!ml-unset rtl:!mr-[4.8125rem];
       }
       .page-body{
-        @apply ml-[calc(65px_+_(90_-_65)_*_((100vw_-_320px)_/_(1920_-_320)))] rtl:ml-unset rtl:mr-[calc(65px_+_(90_-_65)_*_((100vw_-_320px)_/_(1920_-_320)))] transition-all duration-500;
+        @apply ml-[calc(65px_+_(90_-_65)_*_((100vw_-_320px)_/_(1920_-_320)))] rtl:!ml-unset rtl:!mr-[calc(65px_+_(90_-_65)_*_((100vw_-_320px)_/_(1920_-_320)))] transition-all duration-500;
       }
       .page-footer{
-        @apply ml-[4.8125rem] rtl:ml-unset rtl:mr-[4.8125rem] w-[calc(100%_-_77px)];
+        @apply ml-[4.8125rem] rtl:!ml-unset rtl:!mr-[4.8125rem] w-[calc(100%_-_77px)];
       }
       &.sidebar-icon {
         .page-body-wrapper {
@@ -41,6 +41,15 @@
           header{
             @apply w-full;
           }
+          /* .page-header{
+            @apply ml-[4.8125rem] rtl:!ml-unset rtl:!mr-[4.8125rem];
+          }
+          .page-body{
+            @apply ml-[calc(65px_+_(90_-_65)_*_((100vw_-_320px)_/_(1920_-_320)))] rtl:!ml-unset rtl:!mr-[calc(65px_+_(90_-_65)_*_((100vw_-_320px)_/_(1920_-_320)))] transition-all duration-500;
+          }
+          .page-footer{
+            @apply ml-[4.8125rem] rtl:!ml-unset rtl:!mr-[4.8125rem] w-[calc(100%_-_77px)];
+          } */
         }
         .page-sidebar {
           nav {
