--- a/html/template/ecommerce.html
+++ b/html/template/ecommerce.html
@@ -1514,7 +1514,45 @@
                     </div>
                   </div>
                 </div>
-                <div class="card-body"></div>
+                <div class="card-body">
+                  <ul class="relative before:content-[''] before:absolute before:border before:border-border-light before:w-[1px] before:h-full before:top-0 before:left-[4%] rtl:left-unset rtl:right-[4%] dark:border-border-dark"> 
+                    <li class="flex gap-4 pb-6 last:pb-0"> 
+                      <div class="relative"><img class="min-w-[40px] h-[40px] rounded-full" src="../../assets/images/avatar/39.jpg" alt="avatar"></div>
+                      <div class="flex flex-col gap-1"><span class="text-content3 text-2xs font-bold">2hrs Ago</span>
+                        <p class="text-title font-medium">Today, I'm very happy about myself, because I realized my dreams.</p>
+                        <ul class="flex items-center gap-2 flex-wrap"> 
+                          <li> <img class="min-w-[40px] h-[40px] rounded-5" src="../../assets/images/product/18.png" alt="t-shirt"></li>
+                          <li> <img class="min-w-[40px] h-[40px] rounded-5" src="../../assets/images/product/17.png" alt="shoes"></li>
+                          <li> <img class="min-w-[40px] h-[40px] rounded-5" src="../../assets/images/product/16.png" alt="watch"></li>
+                        </ul>
+                      </div>
+                    </li>
+                    <li class="flex gap-4 pb-6 last:pb-0"> 
+                      <div class="relative"><img class="min-w-[40px] h-[40px] rounded-full" src="../../assets/images/avatar/40.png" alt="avatar"></div>
+                      <div class="flex flex-col gap-1"><span class="text-content3 text-2xs font-bold">5hrs Ago</span>
+                        <p class="text-title font-medium">That is the key of this collection, being yourself. Don't be into trends.</p>
+                      </div>
+                    </li>
+                    <li class="flex gap-4 items-center pb-6 last:pb-0"> 
+                      <div class="min-w-[40px]">   
+                        <div class="activity-dot-secondary"></div>
+                      </div>
+                      <div class="flex flex-col gap-1"><span class="text-title text-xs relative before:content-[''] before:absolute before:h-[2px] before:left-[-40%] rtl:left-unset rtl:right-[-40%] before:bg-border-light before:top-1/2 before:w-[calc(100%_-_55px)]">25 Oct,2022</span></div>
+                    </li>
+                    <li class="flex gap-4 pb-6 last:pb-0"> 
+                      <div class="relative"><img class="min-w-[40px] h-[40px] rounded-full" src="../../assets/images/avatar/41.png" alt="avatar"></div>
+                      <div class="flex flex-col gap-1"><span class="text-content3 text-2xs font-bold">10:30 pm</span>
+                        <p class="text-title font-medium">I think it's an old fashioned notion that fashion needs to be exclusive to be fashionable.</p>
+                      </div>
+                    </li>
+                    <li class="flex gap-4 pb-6 last:pb-0"> 
+                      <div class="relative"><img class="min-w-[40px] h-[40px] rounded-full" src="../../assets/images/avatar/42.png" alt="avatar"></div>
+                      <div class="flex flex-col gap-1"><span class="text-content3 text-2xs font-bold">12:00 pm</span>
+                        <p class="text-title font-medium">If you wear clothes that don't suit you.</p>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </div>
             <div class="col-span-4 4xl:col-span-8 lg:col-span-12 lg:-order-1">
@@ -1764,20 +1802,95 @@
                     </div>
                   </div>
                 </div>
+                <div class="card-body"></div>
               </div>
             </div>
           </div>
         </div>
+        <!-- Page Body End -->
+        <div class="page-footer 3sm:!px-[10px] fixed bottom-0 xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto transition-all duration-300 sm:flex-col flex sm:gap-1 gap-2 items-center justify-between py-[1.1875rem] shadow-footer bg-white px-body-space mt-card-gap"> 
+          <p class="text-xs font-semibold text-center text-content">Copyright 2023 © Govo theme by pixelstrap</p>
+          <div class="flex items-center gap-2"> 
+            <p class="text-xs font-semibold text-center text-content">Hand crafted & made with</p><i class="stroke-danger h-[18px] w-[18px] fill-danger" data-feather="heart"></i>
+          </div>
+        </div>
+      </div>
+      <!-- Customizer-->
+      <div class="bg-white customizer-sidebar dark:bg-sidebar-dark2 dark:border-border-dark">
+        <div class="flex rtl:flex items-center text-title bg-primary justify-between  p-[15px] shadow-md"> <span class="text-base font-semibold text-white">Customizer</span>
+          <button class="customizer-close"> <i class="w-4 h-4 stroke-white" data-feather="x"></i></button>
+        </div>
+        <div class="py-[4px] dark:bg-mode-200">
+          <div class="px-[15px] py-7  h-[calc(100vh_-_139px)] overflow-auto ">
+            <ul class="flex flex-col gap-7 mode-event">
+              <li> 
+                <div>
+                  <h5 class="leading-none text-dark text-sm font-semibold dark:text-white">Template Mode</h5><span class="leading-none text-content text-xs font-medium">Choose template mode dark & light</span>
+                </div>
+                <div class="mt-2"> 
+                  <ul class="flex items-center gap-3 flex-wrap"> 
+                    <li class="relative">
+                      <input class="absolute invisible opacity-0 peer" checked id="light-checked" type="radio" name="mode"><i class="stroke-primary z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
+                      <label class="block overflow-hidden border shadow-md mode-theme-light border-light dark:border-border-dark rounded-5" for="light-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/light.png" alt="light"></label>
+                    </li>
+                    <li class="relative">
+                      <input class="absolute invisible opacity-0 peer" id="dark-checked" type="radio" name="mode"><i class="stroke-white z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
+                      <label class="block overflow-hidden border shadow-md mode-theme-dark border-light dark:border-border-dark rounded-5" for="dark-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/dark.png" alt="dark"></label>
+                    </li>
+                  </ul>
+                </div>
+              </li>
+              <li>
+                <div>
+                  <h5 class="leading-none text-dark text-sm font-semibold dark:text-white">Layout Type</h5><span class="leading-none text-content text-xs">Choose layout Ltr & Rtl</span>
+                </div>
+                <div class="mt-2">
+                  <ul class="flex items-center gap-3"> 
+                    <li class="relative">
+                      <input class="absolute invisible opacity-0 peer" checked id="ltr-checked" type="radio" name="dir"><i class="stroke-primary z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
+                      <label class="block overflow-hidden border shadow-md layout-ltr border-light dark:border-border-dark rounded-5" for="ltr-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/ltr.png" alt="ltr"></label>
+                    </li>
+                    <li class="relative"> 
+                      <input class="absolute invisible opacity-0 peer" id="rtl-checked" type="radio" name="dir"><i class="stroke-white z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
+                      <label class="block overflow-hidden border shadow-md layout-rtl border-light dark:border-border-dark rounded-5" for="rtl-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/rtl.png" alt="rtl"></label>
+                    </li>
+                  </ul>
+                </div>
+              </li>
+              <li>
+                <div>
+                  <h5 class="leading-none text-dark text-sm font-semibold dark:text-white">Sidebar Type</h5><span class="leading-none text-content text-xs">Choose Sidebar  icon & full</span>
+                </div>
+                <div class="mt-2">
+                  <ul class="flex items-center gap-3">
+                    <li class="relative">
+                      <input class="absolute invisible opacity-0 peer" checked id="full-sidebar" type="radio" name="sidebar-type"><i class="stroke-primary z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
+                      <label class="dark:border-border-dark block overflow-hidden border shadow-md sidebar-full border-light rounded-5" for="full-sidebar"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/full-sidebar.png" alt="full sidebar"></label>
+                    </li>
+                    <li class="relative"> 
+                      <input class="absolute invisible opacity-0 peer" id="icon-sidebar" type="radio" name="sidebar-type"><i class="stroke-primary z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
+                      <label class="dark:border-border-dark block overflow-hidden border shadow-md sidebar-icon border-light rounded-5" for="icon-sidebar"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/icon-sidebar.png" alt="icon sidebar"></label>
+                    </li>
+                  </ul>
+                </div>
+              </li>
+              <li>
+                <div class="flex items-center justify-between"><span class="dark:text-white text-sm font-semibold text-title">Monochrome Mode </span>
+                  <label class="inline-flex relative items-center cursor-pointer">
+                    <input class="sr-only peer monochrome toggle toggle-primary" name="monochrome" type="checkbox" id="monochrome"><span class="w-7 h-4 bg-content rounded-full peer peer-focus:outline-none peer-checked:after:translate-x-full peer-checked:after:content-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-light after:border after:rounded-full after:h-3 after:w-3 after:transition-all peer-checked:bg-primary"></span>
+                  </label>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="flex items-center gap-2 p-[15px] border-t border-light dark:bg-primaryLight dark:border-t dark:border-border-dark "> 
+          <button class="btn btn-ghost flex-1 reset-customizer dark:!bg-sidebar-dark dark:text-white">Reset </button>
+          <button class="btn btn-primary text-white flex-1">Buy Now</button>
+        </div>
       </div>
     </main>
   </body>
-  <!-- Page Body End -->
-  <div class="page-footer 3sm:!px-[10px] fixed bottom-0 xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto transition-all duration-300 sm:flex-col flex sm:gap-1 gap-2 items-center justify-between py-[1.1875rem] shadow-footer bg-white px-body-space mt-card-gap"> 
-    <p class="text-xs font-semibold text-center text-content">Copyright 2023 © Govo theme by pixelstrap</p>
-    <div class="flex items-center gap-2"> 
-      <p class="text-xs font-semibold text-center text-content">Hand crafted & made with</p><i class="stroke-danger h-[18px] w-[18px] fill-danger" data-feather="heart"></i>
-    </div>
-  </div>
   <!-- Feather Icon Js -->
   <script src="../../assets/js/feather.min.js"></script>
   <script src="../../assets/js/feather-custom.js"></script>
