--- a/html/template/blog-grid.html
+++ b/html/template/blog-grid.html
@@ -44,9 +44,9 @@
                       <use href="../../assets/svg/sprite.svg#Search"> </use>
                     </svg><i class="search-close hidden cursor-pointer xl:block w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] absolute" data-feather="x"></i>
                   </div>
-                  <!-- Search End    -->
+                  <!-- Search End -->
                 </div>
-                <div class="icon-menu"> 
+                <div class="icon-menu">
                   <ul class="flex items center">
                     <li class="cursor-pointer hidden 2xl:flex items-center justify-center px-[calc(7px_+_(14_-_7)_*_((100vw_-_320px)_/_(1920_-_320)))] first:pl-0 last:pr-0  last:border-r-none border-r border-border-light dark:border-border-dark rtl:border-l rtl:border-r-0">
                       <button class="search-show">
@@ -1049,7 +1049,7 @@
             <div class="col-span-3 2xl:col-span-4 blog-sidebar lg:w-[290px] sm:w-[280px]">
               <div class="card sticky top-0">
                 <div class="card-header border-b-0">
-                  <button class="justify-end hidden mb-3 lg:flex blog-close-sidebar absolute right-[-50px] top-[-16px] bg-gray-light p-2 ">  <i class="w-5 h-5 stroke-title" data-feather="x"></i></button>
+                  <button class="justify-end hidden mb-3 lg:flex blog-close-sidebar absolute right-[-50px] top-[-16px] bg-gray-light p-2 dark:bg-sidebar-dark2">  <i class="w-5 h-5 stroke-title" data-feather="x"></i></button>
                   <div class="search-box relative">
                     <input class="rounded-full bg-gray-light dark:bg-sidebar-dark2 dark:text-white w-full py-[.6875rem] pl-[1.5625rem] pr-[3.4375rem] text-xs font-semibold text-title" placeholder="Type to Search..." type="search">
                     <svg class="w-6 h-6 stroke-title dark:stroke-white top-1/2 -translate-y-1/2 right-[1.5625rem] absolute"> 
