--- a/assets/postcss/pages/_steps.css
+++ b/assets/postcss/pages/_steps.css
@@ -6,20 +6,17 @@
     counter-reset: step;
     grid-auto-columns: 1fr;
     @apply inline-grid grid-flow-col overflow-hidden overflow-x-auto items-baseline;
-
+    
     .step {
-      @apply grid grid-cols-1 grid-rows-1 place-items-center text-center min-w-[4rem];
-
+      @apply grid grid-cols-1 grid-rows-1 place-items-center text-center min-w-[4rem]; 
       &:before {
-        @apply top-0 col-start-1 row-start-1 h-2 w-full content-[''] ml-[-100%] rtl:ml-unset rtl:mr-[-100%] transform;
+        @apply top-0 col-start-1 row-start-1 h-2 w-full content-[''] ml-[-100%] rtl:ml-unset rtl:!mr-[-100%] transform;
       }
-
       &:after {
         content: counter(step);
         counter-increment: step;
         @apply z-[1] relative col-start-1 row-start-1 grid h-8 w-8 place-content-center place-self-center rounded-full;
       }
-
       &:before,
       &:after {
         @apply bg-gray-100 dark:bg-sidebar-dark2 text-dark leading-none;
@@ -75,7 +72,7 @@
         @apply grid gap-2 min-h-[4rem] justify-items-start grid-cols-[2.5rem,_1fr] grid-rows-[auto];
 
         &:before {
-          @apply h-full w-2 -translate-x-1/2 -translate-y-1/2 ml-[50%] rtl:ml-unset rtl:mr-[30%];
+          @apply h-full w-2 -translate-x-1/2 -translate-y-1/2 ml-[50%] rtl:ml-unset rtl:!mr-[30%];
         }
       }
     }
