--- a/assets/pug/pages/template/blog-grid.pug
+++ b/assets/pug/pages/template/blog-grid.pug
@@ -63,7 +63,7 @@ html(lang='en')
             div.col-span-3(class="2xl:col-span-4 blog-sidebar lg:w-[290px] sm:w-[280px]")
               div.card.sticky.top-0
                 div.card-header.border-b-0
-                  button(class="justify-end hidden mb-3 lg:flex blog-close-sidebar absolute right-[-50px] top-[-16px] bg-gray-light p-2 ")   
+                  button(class="justify-end hidden mb-3 lg:flex blog-close-sidebar absolute right-[-50px] top-[-16px] bg-gray-light p-2 dark:bg-sidebar-dark2")   
                     i(data-feather="x" class="w-5 h-5 stroke-title")
                   div.search-box.relative
                     input(class="rounded-full bg-gray-light dark:bg-sidebar-dark2 dark:text-white w-full py-[.6875rem] pl-[1.5625rem] pr-[3.4375rem] text-xs font-semibold text-title" placeholder="Type to Search..." type="search")       
