--- a/assets/pug/pages/template/ecommerce.pug
+++ b/assets/pug/pages/template/ecommerce.pug
@@ -48,25 +48,25 @@ html(lang='en')
                         div.col-span-6(class="xl:col-span-6 xl3:col-span-12")
                             div.card.gap-0 
                                 div.card-header
-                                    +card-header("Recent Statistics","select",HiSTORY_DATE_DROPDOWN)
+                                    +card-header("Sales Summary ( Jun 2023)","select",HiSTORY_DATE_DROPDOWN)
                                 div.card-body
-                                    div.relative
-                                        div#recentStatisticsChart1    
-                                        div#recentStatisticsChart2(class="absolute inset-0")
+                                    div.relative 
+                                        div#chart
+                                        //- div#recentStatisticsChart2(class="absolute inset-0")
                         div.col-span-7(class="4xl:col-span-8 lg:col-span-12 lg:-order-1")
                             div.card
                                 div.card-header
                                     div.flex.justify-between.w-full(class=`flex-wrap gap-2 items-center`)
                                         h3(class="text-lg font-bold leading-none text-title") Order Detail
-                                        div.flex.items-center.gap-4    
+                                        div.flex.items-center.gap-4   
                                             div.search-box.relative
-                                                input(class="border border-border-light dark:border-border-dark rounded-5 w-full py-[8px] pr-[25px] pl-[48px] rtl:pl-[25px] rtl:pr-[48px] text-xs font-semibold text-title" placeholder="Search..." type="search")       
-                                                +SVG_ICON("Search","xl:hidden w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 left-[17px] rtl:left-unset rtl:right-[17px] absolute dark:stroke-white")
+                                                input(class="border border-border-light dark:bg-sidebar-dark2 dark:border-border-dark rounded-5 w-full py-[8px] pr-[25px] pl-[48px] rtl:pl-[25px] rtl:pr-[48px] text-xs font-semibold text-title dark:text-white" placeholder="Search..." type="search")       
+                                                +SVG_ICON("Search","xl:hidden w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title dark:stroke-white top-1/2 -translate-y-1/2 left-[17px] rtl:left-unset rtl:right-[17px] absolute dark:stroke-white")
                                                 i(data-feather="x" class="search-close hidden cursor-pointer xl:block w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] absolute")
                                             div.dropdown.on-hover-show
                                                 button(class="flex rounded-full items-center justify-center p-[5px] bg-gray-light dark:bg-sidebar-dark2") 
                                                     +SVG_ICON("Setting","w-[18px] h-[18px] stroke-title")   
-                                                div.dropdown-menu
+                                                div.dropdown-menu 
                                                     ul
                                                         li
                                                             a(href="javascript:void(0)") Yearly
@@ -101,10 +101,6 @@ html(lang='en')
                                 div.card-header
                                     +card-header("Customers","setting", HISTORY_DROPDOWN)
                                 div.card-body
-
-
-
-
 
                         //- div.col-span-3(class="4xl:col-span-4 lg:col-span-12")
                         //-   div.grid.grid-cols-2.gap-card-gap  
