--- a/html/template/ecommerce.html
+++ b/html/template/ecommerce.html
@@ -44,9 +44,9 @@
                       <use href="../../assets/svg/sprite.svg#Search"> </use>
                     </svg><i class="search-close hidden cursor-pointer xl:block w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] absolute" data-feather="x"></i>
                   </div>
-                  <!-- Search End    -->
+                  <!-- Search End -->
                 </div>
-                <div class="icon-menu"> 
+                <div class="icon-menu">
                   <ul class="flex items center">
                     <li class="cursor-pointer hidden 2xl:flex items-center justify-center px-[calc(7px_+_(14_-_7)_*_((100vw_-_320px)_/_(1920_-_320)))] first:pl-0 last:pr-0  last:border-r-none border-r border-border-light dark:border-border-dark rtl:border-l rtl:border-r-0">
                       <button class="search-show">
@@ -1163,7 +1163,7 @@
               <div class="card gap-0"> 
                 <div class="card-header">
                   <div class="flex justify-between w-full flex-wrap gap-2 items-center">
-                    <h3 class="text-lg font-bold text-title leading-none">Recent Statistics</h3>
+                    <h3 class="text-lg font-bold text-title leading-none">Sales Summary ( Jun 2023)</h3>
                     <div class="custom-select select-style-1"> 
                       <select class="capitalize">
                         <option>19 Aug - 25 Aug</option>
@@ -1174,9 +1174,8 @@
                   </div>
                 </div>
                 <div class="card-body">
-                  <div class="relative">
-                    <div id="recentStatisticsChart1">   </div>
-                    <div class="absolute inset-0" id="recentStatisticsChart2"></div>
+                  <div class="relative"> 
+                    <div id="chart"></div>
                   </div>
                 </div>
               </div>
@@ -1186,10 +1185,10 @@
                 <div class="card-header">
                   <div class="flex justify-between w-full flex-wrap gap-2 items-center">
                     <h3 class="text-lg font-bold leading-none text-title">Order Detail</h3>
-                    <div class="flex items-center gap-4">   
+                    <div class="flex items-center gap-4">  
                       <div class="search-box relative">
-                        <input class="border border-border-light dark:border-border-dark rounded-5 w-full py-[8px] pr-[25px] pl-[48px] rtl:pl-[25px] rtl:pr-[48px] text-xs font-semibold text-title" placeholder="Search..." type="search">
-                        <svg class="xl:hidden w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 left-[17px] rtl:left-unset rtl:right-[17px] absolute dark:stroke-white"> 
+                        <input class="border border-border-light dark:bg-sidebar-dark2 dark:border-border-dark rounded-5 w-full py-[8px] pr-[25px] pl-[48px] rtl:pl-[25px] rtl:pr-[48px] text-xs font-semibold text-title dark:text-white" placeholder="Search..." type="search">
+                        <svg class="xl:hidden w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title dark:stroke-white top-1/2 -translate-y-1/2 left-[17px] rtl:left-unset rtl:right-[17px] absolute dark:stroke-white"> 
                           <use href="../../assets/svg/sprite.svg#Search"> </use>
                         </svg><i class="search-close hidden cursor-pointer xl:block w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] absolute" data-feather="x"></i>
                       </div>
@@ -1199,7 +1198,7 @@
                             <use href="../../assets/svg/sprite.svg#Setting"> </use>
                           </svg>
                         </button>
-                        <div class="dropdown-menu">
+                        <div class="dropdown-menu"> 
                           <ul>
                             <li><a href="javascript:void(0)">Yearly</a></li>
                             <li><a href="javascript:void(0)">Monthly</a></li>
