--- a/html/template/user-profile.html
+++ b/html/template/user-profile.html
@@ -46,9 +46,9 @@
                       <use href="../../assets/svg/sprite.svg#Search"> </use>
                     </svg><i class="search-close hidden cursor-pointer xl:block w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] absolute" data-feather="x"></i>
                   </div>
-                  <!-- Search End    -->
+                  <!-- Search End -->
                 </div>
-                <div class="icon-menu"> 
+                <div class="icon-menu">
                   <ul class="flex items center">
                     <li class="cursor-pointer hidden 2xl:flex items-center justify-center px-[calc(7px_+_(14_-_7)_*_((100vw_-_320px)_/_(1920_-_320)))] first:pl-0 last:pr-0  last:border-r-none border-r border-border-light dark:border-border-dark rtl:border-l rtl:border-r-0">
                       <button class="search-show">
@@ -1743,7 +1743,7 @@
               </ul>
               <div class="justify-end flex items-center gap-3">
                 <label class="dark:bg-sidebar-dark2 dark:text-white btn bg-gray-light p-2 text-title" for="suggest-modal">Save                                </label>
-                <label class="btn bg-success p-2 text-white" for="suggest-modal">Cancel                                </label>
+                <label class="dark:text-white btn bg-success p-2 text-white" for="suggest-modal">Cancel</label>
               </div>
             </form>
           </div>
@@ -1805,7 +1805,7 @@
           </div>
         </div>
       </div>
-      <div class="modal-main">
+      <div class="modal-main"> 
         <input class="peer" id="follow-modal" name="follow-modal" type="checkbox">
         <label class="modal-overlay peer-checked:block" for="follow-modal"></label>
         <div class="modal modal-center peer-checked:opacity-100 peer-checked:visible w-full max-w-sm dark:bg-sidebar-dark2">
@@ -1831,13 +1831,13 @@
                 <li class="flex justify-between items-center follow-friend">
                   <div class="flex items-center gap-2 w-full">
                     <div class="avatar rounded-full w-10 h-10"><img src="../../assets/images/user-app/21.png" alt="user"></div>
-                    <div class="w-[calc(100%_-_52px)]"> 
+                    <div class="w-[calc(100%_-_52px)]">
                       <p class="text-title text-xs font-semibold dark:text-white">Josue Smith</p><span class="text-content3 font-semibold text-2xs">Fullstack Developer</span>
                     </div>
                   </div><a class="dark:bg-sidebar-dark2 dark:text-white follow-btn btn bg-gray-light p-2" href="javascript:void(0)"> Follow</a>
                 </li>
                 <li class="flex justify-between items-center follow-friend">
-                  <div class="flex items-center gap-2 w-full">
+                  <div class="flex items-center gap-2 w-full"> 
                     <div class="avatar rounded-full w-10 h-10"><img src="../../assets/images/user-app/16.png" alt="user"></div>
                     <div class="w-[calc(100%_-_52px)]"> 
                       <p class="text-title text-xs font-semibold dark:text-white">Raegan Corkery</p><span class="text-content3 font-semibold text-2xs">Fullstack Developer</span>
